Fixed issues with displays on mobiles devices

--- a/DexComplete/css/dexcomplete.css
+++ b/DexComplete/css/dexcomplete.css
@@ -130,7 +130,6 @@
 
 @media (max-width: 768px) {
     .wrapper {
-        margin-top: 120px;
     }
     .minHeaderHeight{
         height: 120px;
