--- a/DexComplete/css/style.css
+++ b/DexComplete/css/style.css
@@ -260,9 +260,15 @@ table tr th { color: #688a7e;}
 #sidebar {
     width: 180px;
     height: 100%;
-    position: fixed;
     background: #394a59;
+    position: fixed;
 }
+@media (min-width: 500px) {
+    #siderbar {
+        position: static !important;
+    }
+}
+
 
 .nav-collapse.collapse {
     display: inline;
